testsuite/tests/typecheck/should_fail/T8428.stderr

T8428.hs:11:19: error:
    Couldn't match type ‘forall s1. ST s1’ with ‘ST s’
    Expected type: IdentityT (forall s. ST s) a -> forall s. ST s a
      Actual type: IdentityT (forall s. ST s) a -> (forall s. ST s) a
    In the second argument of ‘(.)’, namely ‘runIdentityT’
    In the expression: runST . runIdentityT
    In an equation for ‘runIdST’: runIdST = runST . runIdentityT
